# MRTG-TelkomCare-Report-Automation

./: .gitignore  README.md  gui_launcher.py  mrtg_telkomcare.spec  pyproject.toml  requirements.txt  test_login.py  test_ocr.py  test_ocr_all_dates.py  test_ocr_noimg.py  test_report_image_only_1date.py  test_scrape_1graphtitle.py  test_scrape_1target.py  test_scrape_3784.py  test_scrape_3targets.py  test_scrape_failed4.py  test_scrape_full_1date.py  test_scrape_mixed.py  test_session_diag.py  test_targets_csv.py
config/: .env.example  list_mrtg_data.txt  list_mrtg_data_img_only.txt  list_mrtg_data_position.txt  list_mrtg_data_position_img_only.txt  list_mrtg_targets.csv
installer/: MRTG-TelkomCare.iss
scripts/: build_exe.ps1  build_installer.ps1  package_portable.ps1
src/mrtg_automation/: __init__.py  __main__.py  app_info.py  cli.py  config.py
src/mrtg_automation/gui/: about_dialog.py  app.py  update_checker.py
src/mrtg_automation/report/: __init__.py  excel.py  images.py  mapping.py  ocr.py
src/mrtg_automation/scraper/: __init__.py  extractor.py  session.py  telkomcare.py
src/mrtg_automation/shared/: __init__.py  dates.py  filenames.py  logging.py  migration.py  paths.py  resume_state.py  validators.py
